[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/EditorFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/SpecialTextEdit/SpecialTextEdit.gd" type="Script" id=3]

[node name="SpecialTextEdit" type="TextEdit" groups=[
"editor_font_users",
]]
margin_right = 269.0
margin_bottom = 205.0
mouse_filter = 2
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_constants/line_spacing = 3
highlight_current_line = true
show_line_numbers = true
context_menu_enabled = false
wrap_enabled = true
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.301961 )
margin_left = 8.0
margin_top = 7.0
margin_right = 10.0
margin_bottom = 9.0
color = Color( 1, 0, 0, 1 )

[node name="ResetBuffers" type="Timer" parent="."]
one_shot = true
[connection signal="cursor_changed" from="." to="." method="_on_cursor_changed"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="timeout" from="ResetBuffers" to="." method="_reset_previous_buffers"]
